# migru

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  GEMINI.md  HACKATHON.md  HOW_IT_WORKS.md  PERFORMANCE.md  README.md  REALTIME_ANALYTICS.md  REVAMP_SUMMARY.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  setup.sh  setup_local.sh
.cleanup_backup/: AGENTS.md  BACKUP_MANIFEST.md  BUGFIX_SUMMARY.md  COMPLETE_STATUS.md  FALLBACK_SYSTEM.md  GEMINI.md  PERSONALIZATION.md  PRIVACY.md  README.md  README_ENHANCED.md  REVAMP_SUMMARY.md  UX_FIXES.md
.cleanup_validation/: README.md  content_analyzer.py  documentation_analysis.md  link_checker.py  reference_scanner.py  reference_validation_report.md
.kiro/specs/codebase-cleanup/: design.md  requirements.md  tasks.md
.letta/: settings.json  settings.local.json
app/: __main__.py  agents.py  ascii-text-art.txt  config.py  core.py  db.py  evals.py  exceptions.py  logger.py  main.py  memory.py  optimize_memory.py  personalization.py  production.py  streaming.py  tools.py  utils.py
app/agents/: smart_router.py
app/cli/: README.md  command_palette.py  session.py
app/models/: local_llm.py
app/services/: cache.py  context.py  knowledge.py  model_factory.py  monitoring.py  multimodal_awareness.py  realtime_analytics.py  user_insights.py  wellness_nudges.py
app/tools/: privacy_tools.py
app/ui/: components.py  theme.py
tests/unit/: test_agents.py  test_cli.py  test_config.py  test_local_integration.py  test_logger.py  test_memory.py
