[project]
name = "migru"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.3.24",
    "ddgs>=9.10.0",
    "firecrawl-py>=4.12.0",
    "google-cloud-firestore>=2.22.0",
    "mistralai>=1.10.0",
    "openai>=2.15.0",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "youtube-search-python>=1.6.6",
    "youtube-transcript-api>=1.2.3",
]
